snapshots/care/data4life/hc-result-sdk-kmp/error/0.3.0-SNAPSHOT/error-0.3.0-20210927.134351-1-all.jar.sha512
bb84f61ee3e03d7353b5e1835f41d79633cb563c9778f99f59b2df86b094159329eb1559dc70a5c225d8b171543aed26af22b6529478ccbe48a5ff3a81eb40ad